--- a/views/formulario.hbs
+++ b/views/formulario.hbs
@@ -1,8 +1,35 @@
-<h1>
-    Soy el formulario
-</h1>
+<div class="container">
 
-<form action="">
-    <label for="">Producto:</label>
-    <input type="text" name="" id="">
+<div class="text-center m-5">
+    <hr />
+    <h1>
+        {{titulo}}
+    </h1>
+    <hr />
+</div>
+
+<div class="row">
+<form action="./formulario" method="post">
+    <div class="mb-3 row">
+    <label for="nombre" class="col-sm-2 col-form-label">Nombre:</label>
+    <div class="col-sm-10">
+        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre del producto"/>
+    </div>
+    </div>
+    <div class="mb-3 row">
+    <label for="precio" class="col-sm-2 col-form-label" >Precio:</label>
+    <div class="col-sm-10">
+        <input type="number" name="precio" class="form-control" id="precio" />
+    </div>
+    </div>
+    <div class="mb-3 text-center">
+        <input type="submit" class="button btn btn-success w-50 p-2" value="Enviar datos">
+    </div>
+    <div class="text-center">
+        <h2 class="text-danger">
+            {{validacion}}
+        </h2>
+    </div>
 </form>
+</div>
+</div>
