--- a/views/formulario.hbs
+++ b/views/formulario.hbs
@@ -11,15 +11,15 @@
 <div class="row">
 <form action="./formulario" method="post">
     <div class="mb-3 row">
-    <label for="nombre" class="col-sm-2 col-form-label">Nombre:</label>
+    <label for="nombre" class="col-sm-2 col-form-label"></label>
     <div class="col-sm-10">
         <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre del producto"/>
     </div>
     </div>
     <div class="mb-3 row">
-    <label for="precio" class="col-sm-2 col-form-label" >Precio:</label>
+    <label for="precio" class="col-sm-2 col-form-label" ></label>
     <div class="col-sm-10">
-        <input type="number" name="precio" class="form-control" id="precio" />
+        <input type="number" name="precio" class="form-control" id="precio" placeholder="Precio" />
     </div>
     </div>
     <div class="mb-3 text-center">
@@ -32,4 +32,8 @@
     </div>
 </form>
 </div>
+<br><br><br>
+
+<p id="warning"> Se les recuerda a los señores proveedores que esta terminantemente prohibido cargar productos relacionados con Miyagi-do, muchas gracias.</p>
+
 </div>
