--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,18 +1,19 @@
 <div>
-    <h1>
-        {{titulo}}
-    </h1>
-
 
     <main>
+
 <br>
 <br>
-      <h1>Bienvenidos</h1>
+<div style="  display: flex; justify-content: center; align-items: center; padding: 25px 25px 25px 25px;">
+  <img src="../images/logo.jpg" alt="">
+</div>
 <br>
 <br>
 
         <article>
+          <hr>
             <h2>Origenes del karate</h2>
+            <hr>
               <div class="fuente">El kárate tiene su origen durante el siglo XVI en las técnicas marciales nativas de las islas Ryukyu, (hoy día Okinawa) caracterizadas por el uso de los puños llamadas (Te / to-de / tuidi), además de técnicas provenientes de la lucha nativa o (tegumi); siendo influenciado por algunos estilos de las artes marciales chinas (kung-fu) y en menor medida por otras disciplinas provenientes de otros países del sureste asiático como Tailandia, Filipinas e Indonesia. Ya, en el siglo XX este estilo marcial fue influenciado en un principio por varios conceptos técnicos, tácticos y filosóficos procedentes de algunas de las artes marciales japonesas modernas, como: el kendo, el judo, y eventualmente el aikido. En un principio, El "Te" siendo el arte antecesor al karate moderno surgió de la necesidad de los guerreros nobles de la isla (los pechin) de proteger al último rey de Okinawa, Sho Tai, y a sí mismos de los varios abusos perpetrados por los guerreros con armadura (los samuráis), quienes hacían parte de los invasores japoneses pertenecientes al clan Satsuma, en el siglo XVII. Poco a poco, el "Te" fue desarrollado en el reino de Ryukyu, y posteriormente se expandió: se enseñó sistemáticamente en Japón después de la era Taisho en el siglo XX, donde fue renombrado como karate-Do, como consecuencia de los intercambios culturales entre los japoneses y los habitantes de las islas Ryukyu. Incorporándose así a la cultura de las artes marciales tradicionales del Japón o Budo.
             El karate-Do de hoy en día se caracteriza fundamentalmente por el empleo de golpes de puño, bloqueos, patadas y golpes de mano abierta, donde las diferentes técnicas reciben varios nombres, según la zona del cuerpo a defender o atacar. Sin embargo el karate, no restringe su repertorio solo a estos, ya que además incluye: varios barridos, algunos lanzamientos y derribos, unas pocas luxaciones articulares; además de golpes a puntos vulnerables, y a puntos nerviosos, en su currículo. En los golpes del karate-Do se unifican la fuerza, la rapidez, la respiración, el equilibrio, la tensión y la relajación al aplicar un correcto giro de cadera y una conexión o sinergia muy precisa de músculos y articulaciones, trasladando una gran parte del peso corporal y del centro de gravedad al impacto. Generalmente, y a diferencia de otras disciplinas, se busca derrotar al adversario mediante un impacto contundente (o unos pocos), preciso y definitivo, buscando ser lo más eficaz posible. A ese concepto se le llama "Ikken hissatsu" o "un golpe, una muerte", de forma semejante a la estocada o al corte de una katana o sable japonés. El karate-do parte de la idea de forjar el cuerpo como un arma, de tal forma que se pueda llegar a defenderse y sin sufrir mayor daño, de ahí que en las escuelas tradicionales se haga tanto ahínco en el endurecimiento físico, con combates a contacto pleno y sin ninguna protección, de esa forma se logra endurecer y potenciar la mayoría de partes del cuerpo a la vez que otorga al practicante un control de sus golpes y un conocimiento de sus habilidades y límites.
               </div>
@@ -26,7 +27,9 @@
 <br>
 <!--Beneficios del karate-->
         <article>
+          <hr>
           <h2>Beneficios del karate</h2>
+          <hr>
           <ol>
             <br>
             <li class="lista_beneficios"><div class="beneficios" >Mejora la circulación de la sangre</div> 
@@ -50,14 +53,16 @@
         </article>
 <br><br>
         <div style="display: flex; justify-content: center">
-          <img src="https://media.istockphoto.com/photos/happy-kids-karate-group-with-coach-picture-id1208343228" alt="Karate antiguo";>
+          <img src="../images/equipazo.png" alt="team";>
           </div>
 <!--Beneficios del karate-->
 <br><br>
 
 <br><br>
 <br><br>
+<hr>
 <h2>Virtudes del guerrero</h2>
+<hr>
 <!--IMAGEN DE LAS VIRTUDES CON HOVER CON TEXTO-->
 <br><br>
 
