--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,25 +1,25 @@
         <nav class="navbar navbar-expand-lg bg-light" id="navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">Dojo Chugi</a>
+              <a class="navbar-brand" href="/">Dojo Cobra Kai</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="./nuestro dojo.html">Nuestro dojo</a>
+                    <a class="nav-link active" href="/nuestro_dojo">Nuestro dojo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/sensei">Nuestros sensei</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="/productos">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="../pages/quiz.html">Cuanto sabes de Karate?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="./contacto.html">Entrena con nosotros</a>
+                    <a class="nav-link active" href="/contacto">Entrena con nosotros</a>
                   </li>
                                     <li class="nav-item">
-                    <a class="nav-link active" href="/formulario">Formulario</a>
+                    <a class="nav-link active" href="/formulario">Proveedores</a>
                   </li>
                 </ul>
               </div>
