--- a/views/productos.hbs
+++ b/views/productos.hbs
@@ -1,3 +1,4 @@
+<br><br>
 <div class="text-center m-5">
   <hr />
   <h1>
@@ -28,27 +29,60 @@
       data-bs-slide-to="2"
       aria-label="Slide 3"
     ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="3"
+      aria-label="Slide 4"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="4"
+      aria-label="Slide 5"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="5"
+      aria-label="Slide 6"
+    ></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://img.olympicchannel.com/images/image/private/t_16-9_3200/primary/vocfcd1jgegrgvexwbov" class="d-block w-100" alt="..." />
+      <img src="../images/productos/655adf24941a0a11003932f3d7c49de64087dbb3a3f521e15510b8858d1b43d15395.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5 style="color: blue;">Karategui masculino</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.ytimg.com/vi/bm7sDSk72VA/maxresdefault.jpg" class="d-block w-100" alt="..." />
+      <img src="../images/productos/cobra-kai-frente1-8d6c06890db9d95f5815264342790118-1024-1024.jpg" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5 style="color: blue;">Taza Cobra Kai</h5>
+      </div>
+    </div>
+        <div class="carousel-item">
+      <img src="../images/productos/cobra-kai1-269243395edc3f517b16008834503736-640-0.jpg" class="d-block w-100" alt="..." />
+      <div class="carousel-caption d-none d-md-block">
+        <h5 style="color: blue;">Remera femenina</h5>
+      </div>
+    </div>
+        <div class="carousel-item">
+      <img src="../images/productos/D_NQ_NP_2X_624710-MLM44949092769_022021-F.webp" class="d-block w-100" alt="..." />
+      <div class="carousel-caption d-none d-md-block">
+        <h5 style="color: blue;">Karategui unisex</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://cdn.shopify.com/s/files/1/0646/4097/files/ninos-karate_grande.jpg?16157736303340741849" class="d-block w-100" alt="..." />
+      <img src="../images/productos/D_NQ_NP_2X_746031-MLM44949088815_022021-F.webp" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5 style="color: blue;">Karategui unisex</h5>
+      </div>
+    </div>
+        <div class="carousel-item">
+      <img src="../images/productos/remeras2021-91-41f766f8e1b5c1c00516104088555720-640-0.jpg" class="d-block w-100" alt="..." />
+      <div class="carousel-caption d-none d-md-block">
+        <h5 style="color: blue;">Remera masculina</h5>
       </div>
     </div>
   </div>
@@ -75,15 +109,16 @@
 
 
 
-<div class="container">
+<div class="container" style="color: white;">
   <div class="text-center m-5">
     <hr>
     <h2>
       Listado de productos
     </h2>
+    <hr>
   </div>
 
-  <table class="table">
+  <table class="table" style="color: white;">
     <thead>
       <th>ID producto</th>
       <th>Nombre</th>
